[package]
name = "crawl-and-conquer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
eyre = "0.6.8"
futures = "0.3.21"
itertools = "0.10.3"
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", features = ["rustls", "rustls-tls-native-roots"] }
scraper = "0.13.0"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["tracing", "env-filter", "local-time"] }
url = "2.2.2"
